[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/scenes/MiniWorld.gd" type="Script" id=1]
[ext_resource path="res://assets/objs/mini_entites/Light.tscn" type="PackedScene" id=2]
[ext_resource path="res://theme/extra_bold.tres" type="DynamicFont" id=3]
[ext_resource path="res://addons/Bus/global_classes/ui/PrenctegeMariginContainer.gd" type="Script" id=4]
[ext_resource path="res://theme.tres" type="Theme" id=5]

[node name="MiniWorld" type="Node2D"]
script = ExtResource( 1 )

[node name="Light" parent="." instance=ExtResource( 2 )]

[node name="border" type="StaticBody2D" parent="."]

[node name="p" type="CollisionPolygon2D" parent="border"]
build_mode = 1

[node name="t" type="Tween" parent="."]

[node name="ui" type="CanvasLayer" parent="."]

[node name="base" type="Control" parent="ui"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )

[node name="back" type="Button" parent="ui/base"]
modulate = Color( 1, 1, 1, 0.501961 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -24.0
margin_right = 105.0
rect_min_size = Vector2( 128, 24 )
text = "Back to Mainmenu"

[node name="top" type="HBoxContainer" parent="ui/base"]
anchor_right = 1.0
rect_min_size = Vector2( 0, 64 )

[node name="icon" type="TextureRect" parent="ui/base/top"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 0 )
mouse_filter = 2
expand = true
stretch_mode = 6

[node name="bg" type="Button" parent="ui/base/top/icon"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
theme_type_variation = "PanelButton"
shortcut_in_tooltip = false
enabled_focus_mode = 0

[node name="info" type="VBoxContainer" parent="ui/base/top"]
margin_left = 68.0
margin_right = 324.0
margin_bottom = 64.0

[node name="Label" type="Label" parent="ui/base/top/info"]
margin_right = 256.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 3 )
text = "Glimer"

[node name="class" type="Label" parent="ui/base/top/info"]
margin_top = 23.0
margin_right = 256.0
margin_bottom = 36.0
theme_type_variation = "BoldLabel"
text = "Fighter"

[node name="progress" type="ProgressBar" parent="ui/base/top/info"]
margin_top = 40.0
margin_right = 256.0
margin_bottom = 60.0
rect_min_size = Vector2( 256, 20 )
percent_visible = false

[node name="lvl" type="Label" parent="ui/base/top/info/progress"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "100/100"
align = 1
valign = 1

[node name="pc_screen" type="ColorRect" parent="ui/base"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.501961 )

[node name="body" type="Container" parent="ui/base/pc_screen"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
LeftPrencent = 0.15
RightPrencent = 0.15

[node name="bg" type="Panel" parent="ui/base/pc_screen/body"]
self_modulate = Color( 1, 1, 1, 0.784314 )
margin_left = 153.6
margin_top = 60.0
margin_right = 870.4
margin_bottom = 540.0
theme_type_variation = "DarkPanel"

[node name="body" type="HBoxContainer" parent="ui/base/pc_screen/body/bg"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="sel" type="Panel" parent="ui/base/pc_screen/body/bg/body"]
self_modulate = Color( 1, 1, 1, 0.501961 )
margin_right = 312.0
margin_bottom = 480.0
rect_min_size = Vector2( 312, 0 )
theme_type_variation = "DarkPanel"

[node name="body" type="VBoxContainer" parent="ui/base/pc_screen/body/bg/body/sel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="tools" type="HBoxContainer" parent="ui/base/pc_screen/body/bg/body/sel/body"]
visible = false
margin_right = 410.0
margin_bottom = 23.0

[node name="text" type="LineEdit" parent="ui/base/pc_screen/body/bg/body/sel/body/tools"]
margin_right = 410.0
margin_bottom = 23.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
align = 1

[node name="search" type="Button" parent="ui/base/pc_screen/body/bg/body/sel/body/tools"]
visible = false
margin_left = 406.0
margin_right = 410.0
margin_bottom = 14.0

[node name="hs0" type="HSeparator" parent="ui/base/pc_screen/body/bg/body/sel/body"]
visible = false
margin_right = 410.0
margin_bottom = 2.0

[node name="scroll" type="HBoxContainer" parent="ui/base/pc_screen/body/bg/body/sel/body"]
margin_right = 312.0
margin_bottom = 480.0
rect_min_size = Vector2( 312, 128 )
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="scroll" type="VScrollBar" parent="ui/base/pc_screen/body/bg/body/sel/body/scroll"]
margin_right = 16.0
margin_bottom = 480.0
value = 32.0
custom_step = 32.0

[node name="cliper" type="Control" parent="ui/base/pc_screen/body/bg/body/sel/body/scroll"]
margin_left = 20.0
margin_right = 312.0
margin_bottom = 480.0
rect_min_size = Vector2( 292, 0 )
rect_clip_content = true
size_flags_horizontal = 3

[node name="grid" type="GridContainer" parent="ui/base/pc_screen/body/bg/body/sel/body/scroll/cliper"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/hseparation = 2
columns = 3

[node name="bs" type="VSeparator" parent="ui/base/pc_screen/body/bg/body"]
margin_left = 316.0
margin_right = 318.0
margin_bottom = 480.0

[node name="doc" type="VBoxContainer" parent="ui/base/pc_screen/body/bg/body"]
margin_left = 322.0
margin_right = 716.0
margin_bottom = 480.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="icon" type="TextureRect" parent="ui/base/pc_screen/body/bg/body/doc"]
margin_left = 197.0
margin_right = 197.0
margin_bottom = 192.0
rect_min_size = Vector2( 0, 192 )
size_flags_horizontal = 6
size_flags_vertical = 0
expand = true
stretch_mode = 6

[node name="hs0" type="HSeparator" parent="ui/base/pc_screen/body/bg/body/doc"]
margin_top = 196.0
margin_right = 394.0
margin_bottom = 198.0

[node name="info" type="VBoxContainer" parent="ui/base/pc_screen/body/bg/body/doc"]
margin_top = 202.0
margin_right = 394.0
margin_bottom = 480.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="name" type="Label" parent="ui/base/pc_screen/body/bg/body/doc/info"]
margin_right = 394.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 3 )
text = "Glimer"
align = 1
valign = 1

[node name="desc" type="RichTextLabel" parent="ui/base/pc_screen/body/bg/body/doc/info"]
margin_top = 23.0
margin_right = 394.0
margin_bottom = 268.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true

[node name="hs0" type="HSeparator" parent="ui/base/pc_screen/body/bg/body/doc/info"]
margin_top = 272.0
margin_right = 394.0
margin_bottom = 274.0

[node name="stats" type="HFlowContainer" parent="ui/base/pc_screen/body/bg/body/doc/info"]
margin_top = 278.0
margin_right = 394.0
margin_bottom = 278.0

[node name="ui_tw" type="Tween" parent="."]

[connection signal="pressed" from="ui/base/back" to="." method="GoBackToMainmenu"]
[connection signal="pressed" from="ui/base/top/icon/bg" to="." method="RequestChangePlayer"]
[connection signal="scrolling" from="ui/base/pc_screen/body/bg/body/sel/body/scroll/scroll" to="." method="OnCSSScrolling"]
